--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "wagmi": "^0.12.10"
+    "wagmi": "^0.12.10",
+    "web3.storage": "^4.5.4"
   }
 }
